# SW_Eng_Proj_1

./: README.md  pyproject.toml
Code/: app.py
Code/Logger/: logger.py
Documentation/: Code_Doku.docx  SW_Eng_Proj_1_doc.docx
SW_Eng_Proj_1/: pyproject.toml
logs/: log.csv  log_1.csv  log_2.csv  log_3.csv
