[tool.poetry]
name = "sw-eng-proj-1"
version = "0.1.0"
description = ""
authors = ["LukasOspelt <lukas.ospelt@adon.li>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
csv-logger = "^1.3.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
